Update sconce